# programming-language

./: .gitignore  Cargo.toml  README.md  TODO.md  jquery-3.7.1.js
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
examples/: comments.ts  conditionals.ts  nothing.ts  types.ts  variables.ts
language specs/: constructs.md  grammar.md
lexer/: Cargo.toml
lexer/src/: keywords.rs  lexer.rs  lib.rs  operators.rs  token.rs
lexer/tests/: integration_test.rs
parser/: Cargo.toml  TODO.md
parser/src/: lib.rs  parser.rs
parser/src/ast_types/: identifier.rs  literal.rs  mod.rs  property.rs  spread_element.rs  template_element.rs
parser/src/expressions/: array_expression.rs  arrow_function_expression.rs  assignment_expression.rs  binary_expression.rs  binary_operation.rs  call_expression.rs  conditional_expression.rs  expression.rs  function_expression.rs  literal.rs  logical_expression.rs  member_expression.rs  mod.rs  new_expression.rs  object_expression.rs  parenthesis_expression.rs  sequence_expression.rs  this_expression.rs  types.rs  (+3 more)
parser/tests/: enums.rs  for_loops.rs  functions.rs  helper_tests.rs  helpers.rs  if_statements.rs  integration_test.rs  jquery.rs  primary_expression.rs  types.rs
parser_derive/: Cargo.toml
parser_derive/src/: lib.rs
semantic/: Cargo.toml  TODO.md
semantic/src/: errors.rs  lib.rs  symbol.rs  types.rs
semantic/tests/: matching_types.rs
src/: ast.rs  lexer.rs  main.rs  parser.rs
src/lexer/: keywords.rs  lexer.rs  mod.rs  span.rs  token.rs
src/parser/: mod.rs  operators.rs  parser.rs
(+121 files in other folders)
