[package]
name = "programming-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.124"
serde = { version = "1.0.206", features = ["derive"] }
string_cache = "0.8.7"
pretty_assertions = "1.4.0"
# bumpalo = { version = "3.16.0", features = ["collections", "boxed"] }
